[gd_scene load_steps=13 format=2]

[ext_resource path="res://cenas/ferramentas/ControladorCartas.tscn" type="PackedScene" id=1]
[ext_resource path="res://sprites/combate/FundoCombate2.png" type="Texture" id=2]
[ext_resource path="res://cenas/Telas/AreaCartas.tscn" type="PackedScene" id=3]
[ext_resource path="res://script/combate/Combate.gd" type="Script" id=4]
[ext_resource path="res://cenas/Telas/mao.tscn" type="PackedScene" id=5]
[ext_resource path="res://sprites/combate/btnAzul.png" type="Texture" id=6]
[ext_resource path="res://sprites/combate/btnVermelho.png" type="Texture" id=7]
[ext_resource path="res://fontes/Nobile-BoldItalic.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://fontes/Nobile-Bold.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://script/combate/maoOponente.gd" type="Script" id=10]

[sub_resource type="DynamicFont" id=1]
size = 70
outline_size = 5
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=2]
size = 55
outline_size = 5
font_data = ExtResource( 9 )

[node name="Combate" type="Node2D"]
script = ExtResource( 4 )

[node name="ControladorCartas" parent="." instance=ExtResource( 1 )]

[node name="Fundo" type="Sprite" parent="."]
z_index = -1
texture = ExtResource( 2 )

[node name="Container" type="Node2D" parent="."]
position = Vector2( 0, -60 )
scale = Vector2( 0.8, 0.9 )
z_index = -1

[node name="Jogador1Ataque" parent="Container" instance=ExtResource( 3 )]
position = Vector2( 0, 88 )
scale = Vector2( 1, 0.65 )

[node name="Jogador1Defesa" parent="Container" instance=ExtResource( 3 )]
position = Vector2( 0, 275 )
scale = Vector2( 1, 0.8 )

[node name="Jogador2Ataque" parent="Container" instance=ExtResource( 3 )]
position = Vector2( 0, -88 )
scale = Vector2( 1, 0.65 )

[node name="Jogador2Defesa" parent="Container" instance=ExtResource( 3 )]
position = Vector2( 0, -275 )
scale = Vector2( 1, 0.8 )

[node name="mao" parent="." instance=ExtResource( 5 )]
position = Vector2( 0, 380 )
scale = Vector2( 0.6, 0.6 )
z_index = 1

[node name="maoOponente" parent="." instance=ExtResource( 5 )]
position = Vector2( 0, -500 )
scale = Vector2( 0.6, 0.6 )
z_index = 1
script = ExtResource( 10 )

[node name="btnAzul" type="Sprite" parent="."]
position = Vector2( 860, -55 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 6 )

[node name="texto" type="Label" parent="btnAzul"]
margin_left = -88.3333
margin_top = -93.3333
margin_right = 94.6668
margin_bottom = 91.6667
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "teste"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnVermelho" type="Sprite" parent="."]
visible = false
position = Vector2( 920, 50 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 7 )

[node name="texto" type="Label" parent="btnVermelho"]
margin_left = -73.0791
margin_top = -54.5
margin_right = 67.9209
margin_bottom = 66.5
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "X"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
